# inifile-cpp

./: .appveyor.yml  .astylerc  .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake-modules/: FindCatch.cmake
dep/: CMakeLists.txt
examples/: CMakeLists.txt  custom_type_conversion.cpp  decode_ini_file.cpp
include/: ini_file.h  inicpp.h
scripts/: get-catch.sh  get-linux-deps.sh  install-deps.sh  travis-build.sh
scripts/dep-scripts/: catch.sh
src/: IniFile.cpp  IniFile.hpp
test/: CMakeLists.txt  TestIniFile.cpp  main.cpp  test_inifile.cpp
test/iniFiles/: exampleNl.ini  exampleNoNl.ini  readOnly.ini
